--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
 
                 <div class="form__radio-btn">
 
-                    <div class="form_radio-btn-item">
+                    <div class="form__radio-btn-item">
                         <input id="radio-1" type="radio" name="radio" value="1" checked>
                         <label for="radio-1">Р</label>
                     </div>
 
-                    <div class="form_radio-btn-item">
+                    <div class="form__radio-btn-item">
                         <input id="radio-2" type="radio" name="radio" value="2">
                         <label for="radio-2">S</label>
                     </div>
 
-                    <div class="form_radio-btn-item">
+                    <div class="form__radio-btn-item">
                         <input id="radio-3" type="radio" name="radio" value="3">
                         <label for="radio-3">E</label>
                     </div>
@@ -67,9 +67,9 @@
                 <label for="consent">Я совершеннолетний, ознакомился и принимаю соглашение об оказании услуг.</label>
             </div>
 
-            <div class="form__error-attention on off">
-                <p>Учётная запись с указанным e-mail уже существует</p>
-                <p>Слишком короткий пароль! Используйте не менее 4 символов.</p>
+            <div>
+                <p class="form__error-attention form__error-attention-email on off">Учётная запись с указанным e-mail уже существует</p>
+                <p class="form__error-attention form__error-attention-password on off">Слишком короткий пароль! Используйте не менее 4 символов.</p>
             </div>
 
             <input class="form__btn" type="submit" value="Зарегистрироваться">
